# tally_app

./: .env.sample  .gitignore  README.md  admin_config.py  build.bat  installer.iss  logging_config.py  main.py  pyproject.toml  requirements.txt  tally_app.spec  tally_config.ini  test.py
database/: database_processor.py  db_connector.py
database/models/: __init__.py  automation_settings.py  company.py  inventory_voucher.py  item.py  ledger.py  ledger_voucher.py  outstanding_models.py  scheduler_config.py  tally_settings.py  trial_balance.py
doc/: TallySyncManager Project Documentation.docx
gui/: app.py  config_manager.py  scale.py  state.py  styles.py  tray_manager.py
gui/components/: company_card.py  configure_company_dialog.py  first_run_password_dialog.py  global_config_dialog.py  image_test_overlay.py  initial_snapshot_dialog.py  protected_access_dialog.py  setup_wizard.py  voucher_selector.py
gui/controllers/: company_controller.py  missed_sync_checker.py  scheduler_controller.py  sync_controller.py  sync_queue_controller.py
gui/pages/: home_page.py  logs_page.py  scheduler_page.py  settings_page.py  sync_page.py
services/: data_processor.py  database_processor.py  sync_service.py  tally_connector.py  tally_launcher.py
utils/: company.xml  credit_note.xml  debit_note.xml  item.xml  outstanding.xml  outstanding_creditors.xml  outstanding_debtors.xml  purchase_vouchers.xml  sales_vouchers.xml
utils/cdc/: contra_cdc.xml  credit_cdc.xml  debit_cdc.xml  item_cdc.xml  journal_cdc.xml  payment_cdc.xml  purchase_cdc.xml  receipt_cdc.xml  sales_cdc.xml
(+10 files in other folders)
